# Anvil-Template

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  config-script.sh  requirements.txt
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-build-issue.yml
.github/workflows/: build-and-test.yml
cmake/: Functions.cmake
docs/docs-gen/latex/: create.sh
docs/docs-gen/latex/snippet/: Abstract.tex  Body.tex  Definitions.tex  Preamble.tex  References.bib
include/sample/: example.hpp
libs/sample/: CMakeLists.txt
libs/sample/bindings/: sample_bindings.cpp
libs/sample/src/: example.cpp
libs/sample/tests/: test_example.py
scripts/: format_all.sh
